{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "208386a3-7c11-46d7-8b14-43590bbf6fd1",
            "actions": [
                {
                    "name": "NoteA",
                    "type": "Button",
                    "id": "39679d81-53b8-4aff-ba5b-19e997b8d4f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NoteB",
                    "type": "Button",
                    "id": "f2f90081-be81-43fe-8d9a-b91a01bda789",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NoteC",
                    "type": "Button",
                    "id": "a44ea341-efd9-4247-a792-cf75b75af59c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e1b47fe3-e9a1-4178-a9ba-6d3fb6c2f105",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoteA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88a260e6-ac6c-47b2-af96-3fae1a94bf61",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoteA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9391dd35-6396-4895-a82c-27f3ff2563b6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoteB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b552e6d4-454d-4cdb-a6f0-c2c9392367a8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoteB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97bda8f8-5d1c-423f-871c-a2a90dccd96f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoteC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f7514c2-255b-4856-8bbd-876848f2043b",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoteC",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}